initial tweaks
